--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint --ext .js,.ts,.vue .",
     "lint:fix": "eslint --fix --ext .js,.ts,.vue .",
     "lint:staged": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@vueuse/core": "^8.9.4",
@@ -57,6 +58,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "naive-ui": "^2.34.3",
+    "only-allow": "^1.1.1",
     "prettier": "^2.8.8",
     "rollup-plugin-visualizer": "^5.8.2",
     "sass": "^1.53.0",
