build(projects): 设置server
使用后端系统，放弃使用mock

--- a/.env.github
+++ b/.env.github
@@ -1,5 +1,5 @@
 # 资源公共路径,需要以 /开头和结尾
-VITE_PUBLIC_PATH = '/qs-admin/'
+VITE_PUBLIC_PATH = '/real-estate-platform-admin/'
 
 # 是否hash路由模式
 VITE_USE_HASH = true
