--- a/.env.development
+++ b/.env.development
@@ -8,11 +8,11 @@ VITE_USE_HASH = false
 VITE_BASE_API = '/api'
 
 # 是否启用MOCK
-VITE_USE_MOCK = true
+VITE_USE_MOCK = false
 
 # 是否启用代理(只对本地vite server生效，开启MOCK时可关闭代理)
 VITE_USE_PROXY = true
 
 # 代理类型(跟启动和构建环境无关)  'dev' | 'test' | 'prod'
-VITE_PROXY_TYPE = 'test'
+VITE_PROXY_TYPE = 'dev'
 
